--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.1"
+    "eslint-plugin-vue": "^6.2.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "7.3.1"
   }
 }
