--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gridsome": "^0.7.0"
   },
   "devDependencies": {
+    "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/vue-remark": "^0.1.10",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
