docs: how to configure logchimp using configuration file

--- a/src/data/doc-links.yaml
+++ b/src/data/doc-links.yaml
@@ -11,6 +11,8 @@
       link: /docs/principles
     - title: Architecture
       link: /docs/architecture
+    - title: Configuration
+      link: /docs/config
 
 - title: CLI
   items:
