--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node": ">=12"
   },
   "dependencies": {
-    "gridsome": "^0.7.23"
+    "gridsome": "^0.7.23",
+    "lucide-vue": "^0.13.0-beta.0"
   },
   "devDependencies": {
     "@gridsome/remark-prismjs": "^0.5.0",
