--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.2",
+    "@octokit/rest": "^18.3.1",
     "gridsome": "^0.7.23",
     "lucide-vue": "^0.14.0"
   },
