--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=12"
   },
   "dependencies": {
+    "@gridsome/plugin-sitemap": "^0.4.0",
     "@octokit/rest": "^18.5.3",
     "gridsome": "^0.7.23",
     "lucide-vue": "^0.15.11",
