--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,9 @@ services:
       - type: redirect
         source: /discord
         destination: https://discord.gg/N34We6e
+      - type: redirect
+        source: /docs/introduction
+        destination: /docs
     envVars:
       - key: NODE_VERSION
         value: 12
