docs: "How to get support for LogChimp?"

--- a/src/data/doc-links.yaml
+++ b/src/data/doc-links.yaml
@@ -21,6 +21,8 @@
 
 - title: Resources
   items:
+    - title: Support
+      link: /docs/support
     - title: Contributing
       link: /docs/contributing
     - title: Logos
