--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "prettier": "prettier --write \"**/*.{yaml,yml,md}\"",
+		"prepare": "husky install"
   },
   "engines": {
     "node": ">=12"
@@ -24,7 +26,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.14.0",
+    "husky": "^7.0.1",
     "node-sass": "^4.14.1",
+    "prettier": "^2.3.2",
     "sass-loader": "7.3.1"
   }
 }
