--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           paths: 'https://logchimp.codecarrot.net/'
           recurse: true
-          linksToSkip: 'https://render.com, https://m.do.co, https://github.com, https://www.postgresql.org, https://opencollective.com, https://gitpod.io, https://www.keycdn.com, https://www.browserstack.com, https://hub.docker.com, https://nodejs.org,  https://discordapp.com,  https://www.patreon.com, https://twitter.com, https://js.stripe.com/v3, https://www.macstadium.com, https://discord.gg'
+          linksToSkip: 'https://render.com, https://m.do.co, https://github.com, https://www.postgresql.org, https://opencollective.com, https://gitpod.io, https://www.keycdn.com, https://www.browserstack.com, https://hub.docker.com, https://nodejs.org,  https://discordapp.com,  https://www.patreon.com, https://twitter.com, https://js.stripe.com/v3, https://www.macstadium.com, https://discord.gg, https://yarnpkg.com, https://www.codecarrot.net'
