--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: 'logchimp.codecarrot.net'
     env: static
-    buildCommand: yarn build
+    buildCommand: npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build
     staticPublishPath: ./dist
     headers:
       - path: /*
