--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-  "name": "website",
-  "private": true,
   "scripts": {
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
-    "prettier": "prettier --write \"**/*.{yaml,yml,md}\"",
-		"prepare": "husky install"
-  },
-  "engines": {
-    "node": ">=12"
+    "dev": "npm run server",
+    "prod": "npm run build && npm run server:prod",
+    "build": "vite build",
+    "server": "ts-node ./server",
+    "server:prod": "cross-env NODE_ENV=production ts-node ./server"
   },
   "dependencies": {
-    "@gridsome/plugin-sitemap": "0.4.0",
-    "@octokit/rest": "18.12.0",
-    "gridsome": "0.7.23",
-    "lucide-vue": "0.45.0",
-    "vue-gtag": "1.16.1"
-  },
-  "devDependencies": {
-    "@gridsome/remark-prismjs": "0.5.0",
-    "@gridsome/vue-remark": "0.2.6",
-    "eslint": "8.15.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-standard": "5.0.0",
-    "eslint-plugin-vue": "8.7.1",
-    "husky": "7.0.4",
-    "node-sass": "^4.14.1",
-    "prettier": "2.6.2",
-    "sass-loader": "7.3.1"
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.31",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/compiler-sfc": "^3.2.33",
+    "@vue/server-renderer": "^3.2.33",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
+    "sirv": "^2.0.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.9",
+    "vite-plugin-ssr": "^0.4.43",
+    "vue": "^3.2.33"
   }
 }
