--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "vite": "^3.0.9",
     "vite-plugin-ssr": "^0.4.43",
     "vue": "^3.2.33"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
