--- a/package.json
+++ b/package.json
@@ -2,33 +2,14 @@
   "name": "website",
   "private": true,
   "scripts": {
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
     "prettier": "prettier --write \"**/*.{yaml,yml,md}\"",
-		"prepare": "husky install"
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">=12"
   },
-  "dependencies": {
-    "@gridsome/plugin-sitemap": "0.4.0",
-    "@octokit/rest": "18.12.0",
-    "gridsome": "0.7.23",
-    "lucide-vue": "0.45.0",
-    "vue-gtag": "1.16.1"
-  },
   "devDependencies": {
-    "@gridsome/remark-prismjs": "0.5.0",
-    "@gridsome/vue-remark": "0.2.6",
-    "eslint": "8.15.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-standard": "5.0.0",
-    "eslint-plugin-vue": "8.7.1",
     "husky": "7.0.4",
-    "node-sass": "^4.14.1",
-    "prettier": "2.6.2",
-    "sass-loader": "7.3.1"
+    "prettier": "2.6.2"
   }
 }
