fix: use `CF_WORKER` variable to conditionally build with opennext pkg

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -36,7 +36,10 @@
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
    */
-  "vars": { "WRANGLER_SEND_METRICS": "false" },
+  "vars": {
+		"WRANGLER_SEND_METRICS": "false",
+		"CF_WORKER": "1"
+	},
   /**
    * Note: Use secrets to store sensitive data.
    * https://developers.cloudflare.com/workers/configuration/secrets/
